--- a/style.css
+++ b/style.css
@@ -1,9 +1,9 @@
 :root {
-    --primary:	#03c7a6;
-    --title: #aeda8a;
-    --text: #66efd7;
-    --bg: #dfece6;
-    --bg-2: #040203;
+    --primary:	#9e6200;
+    --title: #bf932a;
+    --text: #79380e;
+    --bg: #fcfcf7;
+    --bg-2: #ecddcab;
     --bg-element: #f1f3f5;
     --urgente: #f58737;
     --prioridade: #77e864;
