--- a/style.css
+++ b/style.css
@@ -1,9 +1,9 @@
 :root {
-    --primary:	#9e6200;
-    --title: #bf932a;
-    --text: #79380e;
+    --primary:	#d2d2d2;
+    --title: #e5e5e5;
+    --text: #ffd700;
     --bg: #fcfcf7;
-    --bg-2: #ecddcab;
+    --bg-2: #082032;
     --bg-element: #f1f3f5;
     --urgente: #f58737;
     --prioridade: #77e864;
