--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 :root {
-    --primary:	#d2d2d2;
+    --primary:	#d8edf2;
     --title: #e5e5e5;
-    --text: #ffd700;
+    --text: #e2e2e2;
     --bg: #fcfcf7;
     --bg-2: #082032;
     --bg-element: #f1f3f5;
