--- a/style.css
+++ b/style.css
@@ -1,13 +1,13 @@
 :root {
-    --primary:	#d8edf2;
-    --title: #e5e5e5;
-    --text: #e2e2e2;
-    --bg: #fcfcf7;
-    --bg-2: #082032;
+    --primary:	hsl(66, 91%, 44%);
+    --title: #fcf8f8;
+    --text: #e42908;
+    --bg: #ebebd1;
+    --bg-2: #020516;
     --bg-element: #f1f3f5;
-    --urgente: #f58737;
-    --prioridade: #77e864;
-    --normal: #d6e340;
+    --urgente: #b11409;
+    --prioridade: #2eeb0d;
+    --normal: #cfdf27;
   }
   
   .container {
